src/main/java/com/example/coupon/domain/errors/NotExistsCouponCode.java
package com.example.coupon.domain.errors;

public class NotExistsCouponCode extends RuntimeException{
}
